[tool.poetry]
name = "carsharing"
version = "0.1.0"
description = ""
authors = ["Victor Golovanenko <drygdryg2014@yandex.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "*"
django = "^5.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
